--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,51 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{pado,
+  author    = {Youngseok Yang and
+               Geon{-}Woo Kim and
+               Won Wook Song and
+               Yunseong Lee and
+               Andrew Chung and
+               Zhengping Qian and
+               Brian Cho and
+               Byung{-}Gon Chun},
+  title     = {Pado: {A} Data Processing Engine for Harnessing Transient Resources
+               in Datacenters},
+  booktitle = {Proceedings of the Twelfth European Conference on Computer Systems,
+               EuroSys 2017, Belgrade, Serbia, April 23-26},
+  pages     = {575--588},
+  publisher = {{ACM}},
+  year      = {2017},
+  url       = {https://doi.org/10.1145/3064176.3064181},
+  doi       = {10.1145/3064176.3064181},
+  timestamp = {Tue, 06 Nov 2018 16:58:31 +0100},
+  biburl    = {https://dblp.org/rec/conf/eurosys/YangKSLCQCC17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  pdf = {eurosys17-yang.pdf}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings {nemo,
+  author = {Youngseok Yang and Jeongyoon Eo and Geon-Woo Kim and Joo Yeon Kim and Sanha Lee and Jangho Seo and Won Wook Song and Byung-Gon Chun},
+  title = {Apache Nemo: A Framework for Building Distributed Dataflow Optimization Policies},
+  booktitle = {2019 {USENIX} Annual Technical Conference ({USENIX} {ATC} 19)},
+  year = {2019},
+  isbn = {978-1-939133-03-8},
+  address = {Renton, WA},
+  pages = {177--190},
+  url = {https://www.usenix.org/conference/atc19/presentation/yang-youngseok},
+  publisher = {{USENIX} Association},
+  month = jul,
+  pdf = {https://www.usenix.org/system/files/atc19-yang-youngseok.pdf}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{terra,
+ author = {Taebum Kim and Eunji Jeong and Geon{-}Woo Kim and Yunmo Koo and Sehoon Kim and Gyeongin Yu and Byung{-}Gon Chun},
+ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+ title = {Terra: Imperative-Symbolic Co-Execution of Imperative Deep Learning Programs},
+ url = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Paper.pdf},
+ volume = {34},
+ year = {2021},
+ pdf = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Paper.pdf},
+ supp = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Supplemental.pdf}
 }
