--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,3 +49,12 @@
  pdf = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Paper.pdf},
  supp = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Supplemental.pdf}
 }
+
+@inproceedings{yu2022orca,
+  title={Orca: A Distributed Serving System for Transformer-Based$ Generative Models},
+  author={Yu, Gyeong-In and Jeong, Joo Seong and Kim, Geon-Woo and Kim, Soojeong and Chun, Byung-Gon},
+  booktitle={16th USENIX Symposium on Operating Systems Design and Implementation (OSDI 22)},
+  pages={521--538},
+  year={2022},
+  pdf = {https://www.usenix.org/system/files/osdi22-yu.pdf}
+}
