--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,7 +51,7 @@
 }
 
 @inproceedings{yu2022orca,
-  title={Orca: A Distributed Serving System for Transformer-Based$ Generative Models},
+  title={Orca: A Distributed Serving System for Transformer-Based Generative Models},
   author={Yu, Gyeong-In and Jeong, Joo Seong and Kim, Geon-Woo and Kim, Soojeong and Chun, Byung-Gon},
   booktitle={16th USENIX Symposium on Operating Systems Design and Implementation (OSDI 22)},
   pages={521--538},
