--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,8 +12,8 @@
                Byung{-}Gon Chun},
   title     = {Pado: {A} Data Processing Engine for Harnessing Transient Resources
                in Datacenters},
-  booktitle = {Proceedings of the Twelfth European Conference on Computer Systems,
-               EuroSys 2017, Belgrade, Serbia, April 23-26},
+  booktitle = {Proceedings of the Twelfth European Conference on Computer Systems
+               (EuroSys 17)},
   pages     = {575--588},
   publisher = {{ACM}},
   year      = {2017},
@@ -35,16 +35,14 @@
   pages = {177--190},
   url = {https://www.usenix.org/conference/atc19/presentation/yang-youngseok},
   publisher = {{USENIX} Association},
-  month = jul,
   pdf = {https://www.usenix.org/system/files/atc19-yang-youngseok.pdf}
 }
 
 @inproceedings{terra,
  author = {Taebum Kim and Eunji Jeong and Geon{-}Woo Kim and Yunmo Koo and Sehoon Kim and Gyeongin Yu and Byung{-}Gon Chun},
- booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+ booktitle = {Advances in Neural Information Processing Systems (NeurIPS 21)},
  title = {Terra: Imperative-Symbolic Co-Execution of Imperative Deep Learning Programs},
  url = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Paper.pdf},
- volume = {34},
  year = {2021},
  pdf = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Paper.pdf},
  supp = {https://papers.nips.cc/paper/2021/file/0b32f1a9efe5edf3dd2f38b0c0052bfe-Supplemental.pdf}
@@ -58,3 +56,20 @@
   year={2022},
   pdf = {https://www.usenix.org/system/files/osdi22-yu.pdf}
 }
+
+@inproceedings{readme,
+ author = {Ruisi Cai and Yeonju Ro and Geon{-}Woo Kim and Peihao Wang and Babak Ehteshami Bejnordi and Aditya Akella and Zhangyang Wang},
+ booktitle = {Advances in Neural Information Processing Systems (To Appear in NeurIPS 24)},
+ title = {Read-{ME}: Refactorizing LLMs as Router-Decoupled Mixture of Experts with System Co-Design},
+ year = {2024},
+}
+
+
+@inproceedings{lovelock,
+  title={Lovelock: Towards Smart NIC-hosted Clusters},
+  author={Park, Seo Jin and Govindan, Ramesh and Shen, Kai and Culler, David and {\"O}zcan, Fatma and Kim, Geon{-}Woo and Levy, Hank},
+  booktitle={HotCarbon Workshop on Sustainable Computer Systems (HotCarbon 24)},
+  year={2024},
+  pdf = {https://arxiv.org/pdf/2309.12665}
+}
+
