--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,9 +59,10 @@
 
 @inproceedings{readme,
  author = {Ruisi Cai and Yeonju Ro and Geon{-}Woo Kim and Peihao Wang and Babak Ehteshami Bejnordi and Aditya Akella and Zhangyang Wang},
- booktitle = {Advances in Neural Information Processing Systems (To Appear in NeurIPS 24)},
+ booktitle = {Advances in Neural Information Processing Systems (NeurIPS 24)},
  title = {Read-{ME}: Refactorizing LLMs as Router-Decoupled Mixture of Experts with System Co-Design},
  year = {2024},
+ pdf = {https://proceedings.neurips.cc/paper_files/paper/2024/file/d298cf34e4539f9134db7f38b42f69fe-Paper-Conference.pdf}
 }
 
 
@@ -73,3 +74,18 @@
   pdf = {https://arxiv.org/pdf/2309.12665}
 }
 
+
+@inproceedings{halos,
+title={{HAL}oS: Hierarchical Asynchronous Local {SGD} over Slow Networks for Geo-Distributed Large Language Model Training},
+author={Geon-Woo Kim and Junbo Li and Shashidhar Gandham and Omar Baldonado and Adithya Gangidi and Pavan Balaji and Zhangyang Wang and Aditya Akella},
+booktitle={Forty-second International Conference on Machine Learning (To Appear in ICML 25)},
+year={2025},
+}
+
+@article{omega,
+  title={{OMEGA}: A Low-Latency {GNN} Serving System for Large Graphs},
+  author={Kim, Geon-Woo and Kim, Donghyun and Moon, Jeongyoon and Liu, Henry and Khan, Tarannum and Iyer, Anand and Kim, Daehyeok and Akella, Aditya},
+  journal={Preprint},
+  year={2025},
+  pdf = {https://arxiv.org/pdf/2501.08547}
+}
