--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -89,3 +89,10 @@ year={2025},
   year={2025},
   pdf = {https://arxiv.org/pdf/2501.08547}
 }
+
+@article{stitchllm,
+title={Stitch{LLM}: Serving {LLM}s, One Block at a Time},
+  author={Hu, Bodun and Li, Shuozhe and Agarwal, Saurabh and Lee, Myungjin and Jajoo, Akshay and Li, Jiamin and Xu, Le and Kim, Geon-Woo and Kim, Donghyun and Xu, Hong and Zhang, Amy and Akella, Aditya},
+  journal={The 63rd Annual Meeting of the Association for Computational Linguistics (To Appear In ACL 25)},
+  year={2025},
+}
